[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bora-the-explorer"
version = "0.1.0"
description = "BORA: Bayesian Optimization Research Assistant"
requires-python = ">=3.11"

dependencies = [
  "openai>=1.57.0",
  "numpy>=1.26",
  "pandas>=2.2",
  "scikit-learn>=1.5",
  "colorama",
]

[tool.setuptools]
packages = ["bora"]

[tool.setuptools.package-data]
bora = ["prompts/*"]